--- a/styles/media-header.css
+++ b/styles/media-header.css
@@ -66,6 +66,7 @@
 		
 	/* display: none; */
 	position: fixed;
+	visibility: hidden;
 	display: block;
 	z-index: 45;
 	top: 0;
@@ -76,7 +77,7 @@
 	height: 768px;
 	box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.1);
 	/* animation: showLeft 1s; */
-	transition: left 0.7s ease-in-out;
+	transition: left 0.7s ease-in-out, visibility 0.7s ease-in-out;
 	} 
 
 	.header__list{
